<resources>
    <!--    <string name="app_name">SubmissionAndroidPemula</string>-->
    <string name="app_name">Recipe Book</string>
    <string name="profile">profile</string>
    <string name="detail_title">Recipe Book</string>
    <string name="detail_duration">Duration: </string>
    <string name="detail_ingredients">Ingredients:</string>
    <string name="detail_steps">Steps: </string>
    <string name="duration_details">2 Minutes</string>
    <string name="name_profile">Rezky Eko Ardianto</string>
    <string name="email_profile">rezekoard@gmail.com</string>
    <string name="action_back">back</string>



    <string-array name="menu_duration">
        <item>30 Minutes</item>
        <item>2 Minutes</item>
        <item>45 Minutes</item>
        <item>10 Minutes</item>
        <item>60 Minutes</item>
        <item>45 Minutes</item>
        <item>30 Minutes</item>
    </string-array>

    <string-array name="menu_name">
        <item>Pasta</item>
        <item>Ramen</item>
        <item>Cake</item>
        <item>Pancake</item>
        <item>Pizza</item>
        <item>Burger</item>
        <item>Fries</item>
    </string-array>


    <integer-array name="photo">
        <item>@drawable/spaghetti</item>
        <item>@drawable/ramen</item>
        <item>@drawable/cake</item>
        <item>@drawable/pancakes</item>
        <item>@drawable/pizza</item>
        <item>@drawable/burger</item>
        <item>@drawable/fries</item>
    </integer-array>

    //pasta

    <string name="pastaIngredients">
        Pasta
        \nCream Cheese
        \nParmesan Cheese
        \nOlive Oil
        \nGarlic
        \nSalt Pepper
    </string>


    <string name="pastaDesc">
        Cook your pasta until al dente
        \nSaute’ garlic in olive oil until fragrant
        \nAdd cream cheese, pasta cooking water, parmesan, and stir well
        \nDrain and add pasta to the skillet
        \nToss until well combined, adding some pasta water if needed
    </string>


    //maggi
    <string name="maggiIngredients">
        Maggi Noodles
        \nWater
        \nMaggi Masala
    </string>
    <string name="maggieDesc">
        Add one and half cup of water
        \nAdd maggi noodles and boil it
        \nAdd the maggi masala on to it
        \nWait for 2 mins
        \nMaggi is ready!
    </string>


    //cake

    <string name="cakeIngredients">
        Maggi Noodles
        \nWater
        \nMaggi Masala
    </string>

    <string name="cakeDesc">
        Add one and half cup of water
        \nAdd maggi noodles and boil it
        \nAdd the maggi masala on to it
        \nWait for 2 mins
        \nMaggi is ready!
    </string>

    //pancake


    <string name="pancakeIngredients">
        Maggi Noodles
        \nWater
        \nMaggi Masala
    </string>
    <string name="pancakeDesc">
        Add one and half cup of water
        Add maggi noodles and boil it
        Add the maggi masala on to it
        \nWait for 2 mins
        \nMaggi is ready!
    </string>

    //pizza

    <string name="pizzaIngredients">
        Maggi Noodles
        \nWater
        \nMaggi Masala
    </string>

    <string name="pizzaDesc">
        Add one and half cup of water
        Add maggi noodles and boil it
        Add the maggi masala on to it
        \nWait for 2 mins
        \nMaggi is ready!
    </string>


    //burgers
    <string name="burgerIngredients">
        Maggi Noodles
        \nWater
        \nMaggi Masala
    </string>

    <string name="burgerDesc">
        Add one and half cup of water
        \nAdd maggi noodles and boil it
        \nAdd the maggi masala on to it
        \nWait for 2 mins
        \nMaggi is ready!
    </string>


    //fries

    <string name="friesIngredients">
        Maggi Noodles
        \nWater
        \nMaggi Masala
    </string>

    <string name="friesDesc">
        Add one and half cup of water
        \nAdd maggi noodles and boil it
        \nAdd the maggi masala on to it
        \nWait for 2 mins
        \nMaggi is ready!
    </string>
</resources>