<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_title"
            android:textSize="23sp"
            android:textColor="@color/lavender"
            android:gravity="center"
            android:paddingTop="8dp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="380dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            app:cardElevation="8dp"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/detailImage"
                android:src="@drawable/ramen"
                android:scaleType="centerInside"
                android:padding="8dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_duration"
            android:textSize="18sp"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration_details"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:id="@+id/detailTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_ingredients"
            android:textSize="18sp"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maggiIngredients"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:id="@+id/detailIngredients"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_steps"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maggieDesc"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:id="@+id/detailDesc"/>
    </LinearLayout>



</ScrollView>